--- a/unifi/NAT66.service
+++ b/unifi/NAT66.service
@@ -7,10 +7,10 @@ After=network-online.target
 Type=oneshot
 ExecStart=bash -c 'ip6tables -t nat -A POSTROUTING -o eth1 -j MASQUERADE;\
   curl -o /lib/systemd/system/NAT66.service https://raw.githubusercontent.com/HPPinata/Notizen/main/unifi/NAT66.service;\
-  systemctl enable NAT66'
+  systemctl daemon-reload'
 ExecStop=bash -c 'ip6tables -t nat -D POSTROUTING -o eth1 -j MASQUERADE;\
   curl -o /lib/systemd/system/NAT66.service https://raw.githubusercontent.com/HPPinata/Notizen/main/unifi/NAT66.service;\
-  systemctl enable NAT66'
+  systemctl daemon-reload'
 RemainAfterExit=true
 
 [Install]
