--- a/unifi/NAT66.service
+++ b/unifi/NAT66.service
@@ -5,12 +5,8 @@ After=network-online.target
 
 [Service]
 Type=oneshot
-ExecStart=bash -c 'ip6tables -t nat -A POSTROUTING -o eth1 -j MASQUERADE;\
-  curl -o /lib/systemd/system/NAT66.service https://raw.githubusercontent.com/HPPinata/Notizen/main/unifi/NAT66.service;\
-  systemctl daemon-reload'
-ExecStop=bash -c 'ip6tables -t nat -D POSTROUTING -o eth1 -j MASQUERADE;\
-  curl -o /lib/systemd/system/NAT66.service https://raw.githubusercontent.com/HPPinata/Notizen/main/unifi/NAT66.service;\
-  systemctl daemon-reload'
+ExecStart=bash -c 'ip6tables -t nat -A POSTROUTING -s fd00::0/8 -j MASQUERADE'
+ExecStop=bash -c 'ip6tables -t nat -D POSTROUTING -s fd00::0/8 -j MASQUERADE'
 RemainAfterExit=true
 
 [Install]
