NAT doc address range

--- a/unifi/NAT66.service
+++ b/unifi/NAT66.service
@@ -5,8 +5,8 @@ After=network-online.target
 
 [Service]
 Type=oneshot
-ExecStart=bash -c 'ip6tables -t nat -A POSTROUTING -s fd00::0/8 -j MASQUERADE'
-ExecStop=bash -c 'ip6tables -t nat -D POSTROUTING -s fd00::0/8 -j MASQUERADE'
+ExecStart=bash -c 'ip6tables -t nat -A POSTROUTING -s fd00::/8,2001:db8::/32 -j MASQUERADE'
+ExecStop=bash -c  'ip6tables -t nat -D POSTROUTING -s fd00::/8,2001:db8::/32 -j MASQUERADE'
 RemainAfterExit=true
 
 [Install]
